# mcp-servers

./: CLAUDE.md  README.md  claude-code-config.json  package.json  pyproject.toml
calcs-api/: .gitignore  README.md  claude-code-config.json  package.json  tsconfig.json
calcs-api-mcp/: .env.example  .gitignore  README.md  claude-code-config.json  cursor-config.json  lm-studio-config.json  pyproject.toml
calcs-api-mcp/calcs_api/: __init__.py  server.py
calcs-api/examples/: claude-code-config.json  usage-examples.md
calcs-api/src/: api-client.ts  index.ts  tools.ts  types.ts
hello-world-mcp/: README.md  claude-code-config.json  pyproject.toml
hello-world-mcp/hello_world_mcp/: __init__.py  server.py
